<?xml version="1.0"?>
<package format="3">
  <name>hri_msgs</name>
  <version>0.8.0</version>
  <description>Messages, services and action definitions useful for Human-Robot Interaction</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>

  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
